Fix wrapping of wide memo titles

--- a/style.css
+++ b/style.css
@@ -51,6 +51,9 @@ header nav {
     border-bottom: 1px solid #bfc1c3;
     padding-bottom: 15px;
 }
+@media (min-width: 641px) {
+    header nav { width: 66.6% }
+}
 
 header nav h2 {
     font-size: inherit;
